[JRCLUST (JRC) change log]
James Jun, HHMI-Janelia Research Campus, Applied Physics and Instrumentation Group

--------------------------------------------------------------------
[2017/9/26]
"jrc git-pull" updates JRCLUST from the Github repository
  https://github.com/jamesjun/JRCLUST
  git must be installed in Windows (https://git-scm.com/download/win).
Probe file moved to "./prb" folder. 
  The prm files is backward compatible. 
  .prb files will be searched in './prb/' folders if not found in the main JRCLUST folder.
Added "jrc wiki" command. 
  It opens a JRCLUST wiki webpage, a new home for the JRCLUST documentation.
Unit test is expanded.
  "jrc preview" GUI is added.
"jrc version" command is added.
  It displays the current version and the date updated.

[2017/9/17]
Bugfix: Program crashed when the number of clusters were less than 7.
  The color grouping size is 7 (# colors for cluster mean waveforms).
  Now it's possible to have any number of clusters.
Speed improvement (~40%) when fft cleanup is disabled (set fft_thresh=0).
  Previously unnecessary data conversion was performed even when fft cleanup is not used.
jrc import-nsx myrecording.ns5 myprobe.prb
  JRC imports Neuroshare format and export the analog channels to .bin file.
  JRC generates .prm file by combining the .bin and .prb file names (e.g. binfile_prbfile.prm) 

[2017/9/15]
jrc import-intan mychannels-A*.dat myprobe.prb
  JRC imports intan recordings, which saved each channel as -A###.dat files.
  JRC combines .dat files to a single .bin file and saves to the directory above.
  JRC generates .prm file by combining the .bin and .prb file names (e.g. binfile_prbfile.prm) 

[2017/9/14]
Bugfix: Waveform correlation based auto-merging
  Some cluster pairs were not merged although their correlation is above the maxCorWav threshold
jrc makeprm myfile.bin mytemplate.prm
  This create a prm file based on a template file for a given .bin file
jrc batch filelist.batch mytemplate.prm